# mini-workbuddy

./: .gitignore  AGENTS.md  README.md  prd.json
.agents/commands/: create-rules.md  plan-feature.md  prime.md
.agents/plans/: uass-session-auth-and-java-coverage.md
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: agents.py  chat.py  conversations.py  logs.py  memory.py  models.py  router.py  skills.py  tools.py
backend/app/core/: config.py  path_security.py  workspace.py
backend/app/schemas/: agent.py  chat.py  conversation.py  file_io.py  log.py  memory.py  model.py  model_test.py  skill.py  tool.py
backend/app/services/: agent_loop.py  agents_store.py  conversations_store.py  file_io_store.py  keyring_service.py  logs_store.py  memory_store.py  model_tester.py  models_store.py  skills_store.py  sse_events.py  system_prompt.py  tool_functions.py  tools_store.py
backend/tests/: __init__.py  test_agents_api.py  test_chat_send_api.py  test_conversations_api.py  test_conversations_store.py  test_file_io_api.py  test_health.py  test_logs_api.py  test_memory_api.py  test_memory_store.py  test_models_api.py  test_models_test_api.py  test_path_security.py  test_skills_api.py  test_system_prompt.py  test_tool_functions.py  test_tools_api.py
config/: application.yml.example
frontend/: .gitignore  LOVABLE_EXPORT.json  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  us017.vite.config.ts  vite.config.ts
(+107 files in other folders)
